kubernetes/https-cert-manager/04-hello-ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ceiba.tolbargy.com
    secretName: hello-tls
  rules:
  - host: ceiba.tolbargy.com
    http:
      paths:
      - backend:
          serviceName: hello-v1-svc
          servicePort: 80
